--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
 	font-family: Ginto, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 12px;
 	line-height: 16px;
-	color: #8e9297;
+	color: #ffffff;
 }
 
 .header1 {
