--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -2,15 +2,21 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 100px;
+    padding: 10px 80px;
     z-index: 1;
 }
 
 .navContainer a {
     text-decoration: none;
     color: white;
-    padding: 0 10px;
+    padding: 0 15px;
     z-index: 10;
+    font-weight: 700;
+    font-size: 14px;
+}
+
+.navContainer a:hover {
+    text-decoration: 2px underline;
 }
 
 .navContainer button {
