--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,12 @@ body {
     color: #404eed;
 }
 
+/* .line {
+	height: 3px;
+	width: 80%;
+	margin: 0 80px;
+	background-color: #404eed;
+} */
 
 /* Three Section */
 
