--- a/src/components/dashboard/dashboardComponents/leftnav.css
+++ b/src/components/dashboard/dashboardComponents/leftnav.css
@@ -1,8 +1,45 @@
 .leftNavContainer {
-    background-color: #000000;
+    background-color: #36393f;
     position: absolute;
     left: 0;
     top: 0;
     min-height: 100vh;
-    width: 40px;
+    width: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 15px;
+    gap: 10px;
+}
+
+.leftNavItems {
+    width: 48px;
+    height: 48px;
+    border-radius: 10px;
+}
+
+.plus {
+    width: 20px;
+    height: 20px;
+}
+
+.plusDiv {
+    background-color: #4f545c ;
+    padding: 13px;
+    border-radius: 50%;
+    text-align: center;
+    width: 48px;
+}
+
+.download {
+    width: 28px;
+    height: 28px;
+}
+
+.downloadDiv {
+    background-color: #4f545c ;
+    padding: 10px;
+    border-radius: 50%;
+    text-align: center;
+    width: 48px;
 }
